# ant-colony-simulator

./: ANT_MOVEMENT_IMPROVEMENTS.md  DESIGN_DOCUMENT.md  PHEROMONE_IMPROVEMENTS.md  README.md  WEBSOCKET_SETUP.md  package-lock.json  package.json  reset-db.sh  turbo.json
apps/backend/: README.md  package.json
apps/backend/src/: index.ts
apps/backend/src/simulation/: AntBehaviorManager.ts  AntColonySimulator.ts  Cache.ts  ColonyManager.ts  EnvironmentManager.ts  PheromoneManager.ts  SimulationEngine.ts
apps/backend/src/types/: ant-colony.ts  drizzle.ts
apps/backend/src/utils/: supabase.ts
apps/frontend/: .env.example  README.md  docker-compose.yml  package.json
apps/frontend/src/: routeTree.gen.ts
apps/frontend/src/hooks/: useSimulationWebSocket.ts
apps/frontend/src/lib/: auth.tsx
apps/frontend/src/lib/components/: create-simulation-button.tsx
apps/frontend/src/lib/components/ui/: app-sidebar.tsx  button.tsx  nav-main.tsx  nav-user.tsx  site-header.tsx
apps/frontend/src/lib/hooks/: useSimulationWebSocket.ts
apps/frontend/src/lib/simulation/: pixi-renderer.ts
apps/frontend/src/routes/: __root.tsx  _authenticated.tsx  index.tsx
apps/frontend/src/routes/_authenticated/_app/: index.tsx
apps/frontend/src/routes/_authenticated/_app/-components/: create-simulation-button.tsx
apps/frontend/src/routes/_authenticated/_app/analytics/: index.tsx
apps/frontend/src/routes/_authenticated/_app/dashboard/: index.tsx
apps/frontend/src/routes/_authenticated/_app/home/: index.tsx
apps/frontend/src/routes/_authenticated/_app/home/-components/: create-simulation-button.tsx
apps/frontend/src/routes/_authenticated/_app/simulation/: $id.tsx  index.tsx
apps/frontend/src/routes/_authenticated/_app/simulation/-components/: add-ants-button.tsx  add-food-sources.tsx  (+2 more)
apps/frontend/src/routes/auth/login/: index.tsx
apps/frontend/src/routes/auth/login/-components/: user-auth-form.tsx
apps/frontend/src/routes/auth/register/: index.tsx
apps/frontend/src/routes/auth/register/-components/: user-auth-form.tsx
apps/frontend/src/routes/simulation/: $id.tsx
apps/frontend/src/types/: drizzle.ts
apps/pg-backend/: .env.example  README.md  package.json  tsconfig.json
apps/pg-backend/src/simulation/: AntBehaviorManager.ts  AntColonySimulator.ts
apps/pg-backend/src/types/: supabase.ts
apps/rust-backend/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  run.sh
apps/rust-backend/src/: cache.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  server.rs  simulation.rs  utils.rs  websocket.rs
apps/rust-backend/src/db/: mod.rs
apps/rust-backend/src/managers/: ant_behavior.rs  ant_spawn.rs  colony.rs  environment.rs  mod.rs  pheromone.rs  rendering.rs
apps/rust-backend/src/server/: binary.rs  messages.rs  mod.rs  websocket.rs
apps/rust-backend/src/simulation/: ant.rs  colony.rs  food.rs  mod.rs  pheromone.rs  snapshot.rs  spatial.rs  steering.rs  terrain.rs
apps/supabase/: README.md  config.toml  package.json  seed.sql
apps/supabase/migrations/: 20250329150651_init.sql  20260609000000_drop_auth_tables.sql
