[package]
name = "ant-colony-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
nalgebra = "0.33"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
# WebSocket support for real-time communication
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

[lib]
name = "ant_colony_simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/main.rs" 