[package]
name = "ant-colony-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy game engine
bevy = "0.11"
# Big Brain AI/behavior tree system
big-brain = "0.18"
# Database and async
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8", features = ["small_rng"] }
nalgebra = "0.33"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
# Parallel processing
rayon = "1.8"
# Concurrent data structures
dashmap = "5.5"
# WebSocket support for real-time communication
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
# UUID for entities
uuid = { version = "1.10", features = ["v4", "serde"] }

[lib]
name = "ant_colony_simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator"
path = "src/main.rs" 