[package]
name = "ant-colony-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
bincode = "1.3"
rayon = "1.10"

[profile.release]
lto = "thin"

[[bin]]
name = "simulator"
path = "src/main.rs"
